small fixes to title for margins(no bleed)

--- a/projects/RNGame/gamestyle.css
+++ b/projects/RNGame/gamestyle.css
@@ -45,13 +45,16 @@ header {
     width: 58%;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 30px;
+    border-radius: 20px;
+    border: 3px solid #4D774E;
 }
 h1 {
     margin-top: 5px;
+    margin-bottom: 5px;
     background-color: #9DC88D;
     color: #4D774E;
-    border-radius: 30px;
+    margin-left: 10px;
+    margin-right:10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
     text-shadow: 2px 2px 3px darkgray;
